force-app/main/default/objects/Transaction__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>amount</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>