force-app/main/default/objects/Transaction__c/fields/debit__c.field-meta.xml
<CustomField>
    <fullName>debit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>debit</label>
    <type>Checkbox</type>
</CustomField>