force-app/main/default/objects/Transaction__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>credit</fullName>
                <default>true</default>
                <label>credit</label>
            </value>
            <value>
                <fullName>debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>